removed fucking typing stuff

--- a/horizon-notebook.ipynb
+++ b/horizon-notebook.ipynb
@@ -21,8 +21,7 @@
     "Two small requirements before starting:\n",
     "Install CasADi, the horizon framework heavily relies on it, and, of course, install Horizon!\n",
     "> **pip install casadi**\\\n",
-    "> **pip install horizon**\\\n",
-    "*(I'm joking, not yet implemented sorry, but you can get the open-source code at the repo and install it)*\n",
+    "> **pip install casadi-horizon**\n",
     "\n",
     "Let's start by importing the module horizon.\n",
     "In particular, we are intrested in the submodule Problem, which allows the creation of our optimization problem.\n",
